--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "es5",
+      "target": "es6",
       "module": "esnext",
       "lib": ["dom", "dom.iterable", "esnext"],
       "allowJs": true,
@@ -16,6 +16,6 @@
       "noEmit": true,
       "jsx": "react-jsx"
     },
-    "include": ["src"]
+    "include": ["src", "src/app"]
 }
   
