--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/preset-typescript": "^7.24.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
@@ -15,6 +14,7 @@
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "jest-fetch-mock": "^3.0.3",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
@@ -24,14 +24,14 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.23.1",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "npx jest"
   },
   "eslintConfig": {
     "extends": [
@@ -55,11 +55,17 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.1.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
