--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
@@ -56,6 +57,7 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
@@ -64,7 +66,9 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.38",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
